// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`request given single body param should translate to request with body 1`] = `
Object {
  "body": Object {
    "in": "body",
    "name": "param",
  },
}
`;

exports[`request given single form param should translate to request with form 1`] = `
Object {
  "body": Object {
    "in": "formData",
    "name": "param",
    "type": "number",
  },
}
`;

exports[`request given single header param should translate to request with header 1`] = `
Object {
  "headers": Array [
    Object {
      "in": "header",
      "name": "param",
    },
  ],
}
`;

exports[`request given single path param should translate to request with path 1`] = `
Object {
  "path": Array [
    Object {
      "in": "path",
      "name": "param",
      "required": true,
    },
  ],
}
`;

exports[`request given single query param should translate to request with query 1`] = `
Object {
  "query": Array [
    Object {
      "in": "query",
      "name": "param",
    },
  ],
}
`;

exports[`request given two header params should translate 1`] = `
Object {
  "headers": Array [
    Object {
      "in": "header",
      "name": "param",
    },
    Object {
      "in": "header",
      "name": "param",
    },
  ],
}
`;

exports[`request given two path params should translate 1`] = `
Object {
  "path": Array [
    Object {
      "in": "path",
      "name": "param",
      "required": true,
    },
    Object {
      "in": "path",
      "name": "param",
      "required": true,
    },
  ],
}
`;

exports[`request given two query params should translate 1`] = `
Object {
  "query": Array [
    Object {
      "in": "query",
      "name": "param",
    },
    Object {
      "in": "query",
      "name": "param",
    },
  ],
}
`;

exports[`request should translate mixed request 1`] = `
Object {
  "body": Object {
    "in": "formData",
    "name": "param",
    "type": "number",
  },
}
`;
